src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Candal&family=Inter:wght@100..900&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: 'OpenSans';
    src: url('/fonts/OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
  }

  @font-face {
    font-family: 'Oswald';
    src: url('/fonts/Oswald-VariableFont_wght.ttf') format('truetype');
  }

  body {
    @apply font-OpenSans;
  }

  ::-webkit-scrollbar {
    @apply w-2;
  }

  ::-webkit-scrollbar-thumb {
    @apply rounded-[4px] bg-black/20;
  }

  ::-webkit-scrollbar-thumb:hover {
    @apply bg-black/30;
  }

  ::-webkit-scrollbar-thumb:active {
    @apply bg-black/40;
  }

  select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    font-size: 0.875rem;
    font-weight: 500;
    font-variation-settings: 'wght' 500;
    background: transparent;
    background-image: url("data:image/svg+xml;utf8,<svg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M4 6L8 10L12 6' stroke='black' strokeWidth='2' strokeLinecap='round' strokeLinejoin='round'/></svg>");
    background-repeat: no-repeat;
    background-position-x: 96%;
    background-position-y: 50%;
  }
}

@layer components {
  .button {
    @apply text-black md:px-6 md:py-2 px-1 py-1 transition-colors ease-in-out duration-300 hover:text-[#732F2F];
  }



  .button-colored {
    @apply text-red-800 md:px-6 md:py-2 px-1 py-1 transition-all ease-in-out duration-300 border-b-2 border-transparent hover:border-red-800;
  }

  .button-filled {
    @apply bg-[#5D1B2A] text-white hover:text-white py-0 px-3 md:px-6 md:py-2 transition-colors ease-in-out duration-300 hover:bg-[#703636];
  }

  .selectable {
    @apply cursor-pointer p-2 rounded-xl hover:shadow hover:bg-black/5 transition-all ease-in-out duration-300;
  }

  .truncate {
    @apply overflow-hidden text-ellipsis whitespace-nowrap;
  }

  .hover-grow {
    @apply transition-transform duration-300 ease-in-out;
  }

  .hover-grow:hover {
    transform: scale(1.1, 1.55) translateY(-18%);
  }

  .back-effect {
    color: #FF5B5B;
    transition: color 0.3s ease-in-out;
  }

  .back-effect:hover {
    color: black;
  }


  .hover-grow-x {
    transition: transform 0.3s ease-in-out;
  }

  .hover-grow-x:hover {
    transform: scale(1.1);
  }








  .main-title {
    font-size: 2rem;
    /* Make the font larger */
    font-weight: 850;
    /* Make it bolder */
    color: #ff0000;
    /* Red color */
  }

  .sub-title {
    font-size: 1rem;
    /* Slightly smaller font for the subtitle */
    color: #ff6666;
    /* Lighter red color */
  }




  .eye {
    width: 70px;
    height: 70px;
    background-color: black;
    border-radius: 50%;
  }

  .dropdown {
    opacity: 0;
    transform: translateY(-10px);
    transition: opacity 0.3s ease, transform 0.3s ease;
  }

  .dropdown-open {
    opacity: 1;
    transform: translateY(0);
  }

}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.fade-in {
  animation: fadeIn 2s ease-in-out;
}

@keyframes bop {

  0%,
  40% {
    transform: translateY(0);
  }

  60% {
    transform: translateY(-20px);
  }

  80% {
    transform: translateY(0);
  }

  100% {
    transform: translateY(0);
  }
}

.bop-animation {
  animation: bop 2s infinite;
}

